# embedded_course

blink_external_led/: CMakeLists.txt  main.cpp
btn_led/: CMakeLists.txt  main.cpp
general/bitwise/: README.md  main.cpp
general/bitwise/src/: countSetBit.cpp  getKthBit.cpp  isPow2.cpp  swap.cpp  toggleKthbit.cpp
general/fork/: fork.cpp  fork_print_pid.cpp  minimal_fork.c  thread.cpp
general/hello_lib/: CMakeLists.txt
general/hello_lib/examples/c_exe/: CMakeLists.txt
general/hello_lib/examples/cpp_exe/: CMakeLists.txt  main.cpp
general/hello_lib/src/: hellolib.c
general/thread/: thread.cpp
pico/+irq/: CMakeLists.txt
pico/+irq/src/: CMakeLists.txt  blink_irq.cpp  gpio_irq.cpp  timer_irq.cpp
pico/binary_counter/: CMakeLists.txt  main.cpp
pico/blink_external_led/: CMakeLists.txt  README.md
pico/btn_led/: README.md
pico/chaos_blink/: CMakeLists.txt  README.md  main.cpp
pico/hello_lcd/src/: CMakeLists.txt  lcd.h  main.cpp
pico/led_controller/: README.md
pico/lockbox/: README.md
pico/toggle_led/: CMakeLists.txt  README.md  main.cpp
pico/ultrasonic/: CMakeLists.txt
pico/ultrasonic/src/: CMakeLists.txt  main.cpp
pico/usb_stdio/: CMakeLists.txt
pico/usb_stdio_cpp/: CMakeLists.txt  README.md  main.cpp
rpiz_hello_world/: CMakeLists.txt
usb_stdio_cpp/: main.cpp
zero/rpiz_hello_world/: README.md  toolchain-rpi-zero-2.cmake
